--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "description": "",
   "version": "",
   "keywords": [],
-  "homepage": "",
-  "author": "",
-  "scripts": {
-    "test": "grunt test"
-  },
+  "homepage": "https://github.com/martial/front-template",
+  "author": "Martial Geoffre-Rouland",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/martial/front-template.git"
+    },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
@@ -25,3 +26,4 @@
     "grunt-shell": "~0.2.0"
   }
 }
+
